--- a/SimpleImageGallary/wwwroot/css/site.css
+++ b/SimpleImageGallary/wwwroot/css/site.css
@@ -33,3 +33,20 @@
         display: none;
     }
 }
+
+.gallery-content {
+    padding: 24px;
+}
+.gallery-image {
+    padding: 8px;
+    background: #fff;
+    border-radius: 2px;
+    display: inline-block;
+    height: 300px;
+    width: 300px;
+    margin: 12px;
+    position: relative;
+    box-shadow: 0 10px 18px rgba(0, 0, 0, 0.20), 0 5px 5px rgba(0,0,0,0.2);
+
+
+}
